--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,9 @@
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.3",
+    "stripe": "^14.5.0",
     "tw-elements-react": "^1.0.0-alpha2",
+    "use-stripe-subscription": "^1.0.6",
     "web-vitals": "^2.1.4",
     "webpack": "^5.89.0"
   },
