--- a/client/package.json
+++ b/client/package.json
@@ -9,8 +9,19 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.0",
+    "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
+    "crypto": "^1.0.1",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "flowbite-react": "^0.6.4",
+    "jsonwebtoken": "^9.0.2",
+    "nodemon": "^3.0.1",
+    "og": "^0.0.2",
+    "pg": "^8.11.3",
+    "pg-promise": "^11.5.4",
     "react": "^18.2.0",
+    "react-animations": "^1.0.0",
     "react-datepicker": "^4.23.0",
     "react-dom": "^18.2.0",
     "react-responsive-carousel": "^3.2.23",
