--- a/client/package.json
+++ b/client/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.5.1",
     "@heroicons/react": "^2.0.18",
     "@react-navigation/native": "^6.1.9",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.0",
+    "babel-plugin-macros": "^3.1.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "crypto": "^1.0.1",
